--- a/requirements.txt
+++ b/requirements.txt
@@ -14,8 +14,11 @@ charset-normalizer==3.1.0
 click==8.1.3
 contourpy==1.0.7
 cycler==0.11.0
+datasets==2.11.0
+dill==0.3.6
 docker-pycreds==0.4.0
 entrypoints==0.4
+evaluate==0.4.0
 fastapi==0.95.0
 ffmpy==0.3.0
 filelock==3.11.0
@@ -43,8 +46,10 @@ mdit-py-plugins==0.3.3
 mdurl==0.1.2
 mpmath==1.3.0
 multidict==6.0.4
+multiprocess==0.70.14
 networkx==3.1
 numpy==1.24.2
+openai==0.27.5
 orjson==3.8.10
 packaging==23.1
 pandas==2.0.0
@@ -53,6 +58,7 @@ Pillow==9.5.0
 prompt-toolkit==3.0.38
 protobuf==3.20.0
 psutil==5.9.4
+pyarrow==11.0.0
 pydantic==1.10.7
 pydub==0.25.1
 Pygments==2.15.0
@@ -64,6 +70,7 @@ pytz==2023.3
 PyYAML==6.0
 regex==2023.3.23
 requests==2.28.2
+responses==0.18.0
 rich==13.3.4
 semantic-version==2.10.0
 sentencepiece==0.1.98
@@ -73,14 +80,16 @@ six==1.16.0
 smmap==5.0.0
 sniffio==1.3.0
 soupsieve==2.4
+spm==0.9.1
 starlette==0.26.1
 svgwrite==1.4.3
 sympy==1.11.1
 tokenizers==0.13.3
 toolz==0.12.0
 torch==2.0.0
+torchaudio==2.0.1
+torchvision==0.15.1
 tqdm==4.65.0
-transformers==4.29.0.dev0
 typing_extensions==4.5.0
 tzdata==2023.3
 uc-micro-py==1.0.1
@@ -90,4 +99,7 @@ wandb==0.14.2
 wavedrom==2.0.3.post3
 wcwidth==0.2.6
 websockets==11.0.1
+xxhash==3.2.0
 yarl==1.8.2
+fschat
+transformers
